<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hobbits</groupId>
    <artifactId>hobbits</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>ilikeplaces JEE6 Webapp</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <dependency>
            <groupId>reaver</groupId>
            <artifactId>reaver</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>scribble</groupId>
            <artifactId>scribble</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>




        <!-- Kundera Dependencies -->
        <dependency>
            <groupId>com.impetus.core</groupId>
            <artifactId>kundera-core</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>com.impetus.client</groupId>
            <artifactId>kundera-hbase</artifactId>
            <version>2.2</version>
        </dependency>
        <!-- End Of Kundera Dependencies -->

        <!-- Test Libraries -->

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>5.10</version>
            <classifier>jdk15</classifier>
            <scope>test</scope>
        </dependency>

        <!-- End Of Test Libraries -->


        <!-- External API's (ONLY Interfaces)-->
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>javaee-api</artifactId>
            <version>5.0-1</version>
            <scope>compile</scope>
        </dependency>

        <!-- End Of External API's (ONLY Interfaces)-->


        <dependency>
            <groupId>net.sf.oval</groupId>
            <artifactId>oval</artifactId>
            <version>1.40</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <argLine>-Xms128m -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
                    <parallel>false</parallel>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/META-INF/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <repositories>
        <repository>
            <id>mvn</id>
            <url>repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>mvnrepository</id>
            <url>http://mvnrepository.com</url>
        </repository>
    </repositories>
</project>
